<resources>
    <string name="app_name">Sudoku</string>
    <string name="sudoku_title">Sudoku</string>
    <string name="sudoku_difficulty_easy">Easy</string>
    <string name="sudoku_difficulty_medium">Medium</string>
    <string name="sudoku_difficulty_hard">Hard</string>
    <string name="sudoku_hint">Hint</string>
    <string name="sudoku_new_highscore">New Highscore!</string>
    <string name="sudoku_score" translatable="false">Score</string>
    <string name="sudoku_highscore" translatable="false">Highscore</string>
    <string name="sudoku_play_again">Play again</string>
    <string name="sudoku_back">Back to main menu</string>
    <string name="sudoku_time">Time</string>
    <string name="sudoku_difficulty">Difficulty</string>
    <string name="sudoku_game_over">Sudoku solved!</string>
    <string name="sudoku_abort_game_title">Abort game</string>
    <string name="sudoku_abort_game_message">Are you sure you want to quit this game? The score will be deleted.</string>
    <string name="sudoku_abort_game_cancel">Cancel</string>
    <string name="sudoku_game_abort_confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>