<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sudoku_title"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/sudoku_start_screen_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkBackground"
                android:text="@string/sudoku_difficulty_easy"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sudoku_start_screen_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/darkBackground"
                android:text="@string/sudoku_difficulty_medium"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sudoku_start_screen_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkBackground"
                android:text="@string/sudoku_difficulty_hard"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>